#pragma once

#include "material.hpp"
namespace strahl::cpu {
class Texture {};
struct Material {};
}  // namespace strahl::cpu